compiler/testData/diagnostics/tests/sealed/NeverFinal.kt
// RUN_PIPELINE_TILL: FRONTEND
<!INCOMPATIBLE_MODIFIERS!>final<!> <!INCOMPATIBLE_MODIFIERS!>sealed<!> class Base {

}

/* GENERATED_FIR_TAGS: classDeclaration */
